syntax = "proto3";

import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "validate/validate.proto";

option go_package = "github.com/duc-cnzj/execit-client/auth;auth";

message AuthLoginRequest {
  string username = 1 [(validate.rules).string.min_bytes = 1];
  string password = 2 [(validate.rules).string.min_bytes = 1];
}

message AuthLoginResponse {
  string token = 1;
  int64 expires_in = 2;
}

message AuthExchangeRequest {
  string code = 1 [(validate.rules).string.min_bytes = 1];
}

message AuthExchangeResponse {
  string token = 1;
  int64 expires_in = 2;
}

message AuthInfoRequest {}

message AuthInfoResponse {
  string id = 1;
  string avatar = 2;
  string name = 3;
  string email = 4;
  string logout_url = 5;
  repeated string roles = 6;
}

message AuthSettingsRequest {}

message AuthSettingsResponse {
  message OidcSetting {
    bool enabled = 1;
    string name = 2;
    string url = 3;
    string end_session_endpoint = 4;
    string state = 5;
  }

  repeated OidcSetting items = 1;
}

service Auth {
  //  Login 登录接口
  rpc Login(AuthLoginRequest) returns (AuthLoginResponse) {
    option (google.api.http) = {
      post: "/api/auth/login",
      body: "*"
    };

    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      security: {} // Disable security key
    };
  }

  //  Info 获取当前登录的用户信息
  rpc Info(AuthInfoRequest) returns (AuthInfoResponse) {
    option (google.api.http) = {
      get: "/api/auth/info"
    };
  }

  //  Settings 获取 sso 配置以及跳转 url
  rpc Settings(AuthSettingsRequest) returns (AuthSettingsResponse) {
    option (google.api.http) = {
      get: "/api/auth/settings"
    };
  }

  // Exchange sso code 换取 token
  rpc Exchange(AuthExchangeRequest) returns (AuthExchangeResponse) {
    option (google.api.http) = {
      post: "/api/auth/exchange",
      body: "*"
    };
  }
}
